2007-05-15  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via.h:
	* unichrome/via_driver.c: (VIASetupDefaultOptions):
	* unichrome/via_driver.h:
	* unichrome/via_swov.c: (viaWaitHQVFlip), (SetColorKey),
	(SetChromaKey), (Upd_Video):
	* unichrome/via_video.c: (Flip), (viaDmaBlitImage), (viaPutImage):

	Xv code cleanup.

2007-05-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_driver.c:
	* unichrome/via_driver.h:
	* unichrome/via.man:

	Added per chipset option defaults.  This should allow the
	driver to install and work out of the box with almost all
	hardware and xorg.conf configurations.

2007-05-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* libxvmc/viaLowLevel.h:
	* unichrome/via_accel.c: (viaFlushPCI), (viaDisableVQ),
	(viaAccelSync):
	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO),
	(ViaSetSecondaryFIFO):
	* unichrome/via_dri.c: (VIADRIRingBufferInit):
	* unichrome/via_driver.c: (VIAPreInit):
	* unichrome/via_id.c:
	* unichrome/via_swov.c: (viaWaitHQVFlip), (VIAVidHWDiffInit),
	(viaSetColorSpace), (ViaInitVideoStatusFlag), (ViaSetVidCtl),
	(SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16), (SetColorKey),
	(SetChromaKey), (Upd_Video):
	* unichrome/via_video.c: (DecideOverlaySupport), (Flip),
	(viaDmaBlitImage), (viaPutImage):

	Fix Xv for P4M890.

2007-04-30  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_swov.c: (Upd_Video):
	* unichrome/via_xvmc.c: (ViaInitXVMC):

	Disable interpolation when the source width is greater than 800, 
	otherwise the picture wraps around the screen. Bug #109
	Fix a typo in ViaInitXVMC. Bug #111

2007-03-28  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO):
	* unichrome/via_swov.c: (viaWaitHQVFlip), (VIAVidHWDiffInit),
	(viaSetColorSpace), (ViaInitVideoStatusFlag), (ViaSetVidCtl),
	(SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16), (SetColorKey),
	(SetChromaKey), (Upd_Video):